force-app/main/default/objects/Marketing_Spend_Period__c/Marketing_Spend_Period__c.object-meta.xml
<CustomObject>
    <label>Marketing Spend</label>
    <nameField>
        <displayFormat>MSP-{0000}</displayFormat>
        <label>Marketing Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>