force-app/main/default/objects/Marketing_Spend_Period__c/fields/Lead_Processed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>