force-app/main/default/objects/Marketing_Spend_Period__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Marketing Spends</relationshipLabel>
    <relationshipName>Marketing_Spends</relationshipName>
    <type>Lookup</type>
</CustomField>