force-app/main/default/objects/Marketing_Spend_Period__c/fields/Period_end_time__c.field-meta.xml
<CustomField>
    <fullName>Period_end_time__c</fullName>
    <label>Period end time</label>
    <type>DateTime</type>
</CustomField>