force-app/main/default/objects/Marketing_Spend_Period__c/fields/Period_start_time__c.field-meta.xml
<CustomField>
    <fullName>Period_start_time__c</fullName>
    <label>Period start time</label>
    <type>DateTime</type>
</CustomField>