force-app/main/default/objects/Marketing_Spend_Period__c/fields/Total_spend__c.field-meta.xml
<CustomField>
    <fullName>Total_spend__c</fullName>
    <label>Total spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>