force-app/main/default/objects/Marketing_Spend_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Campaign__c</columns>
    <columns>Period_start_time__c</columns>
    <columns>Period_end_time__c</columns>
    <columns>Total_spend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>